Ongoing updates. Still draft. Will squash this commit later.

--- a/Factions_FactionsUUIDv1/pom.xml
+++ b/Factions_FactionsUUIDv1/pom.xml
@@ -27,8 +27,8 @@
 
         <!-- Factions UUID -->
         <dependency>
-            <groupId>dev.kitteh.tmpfactions</groupId>
-            <artifactId>factions</artifactId>
+            <groupId>dev.kitteh</groupId>
+            <artifactId>factionsuuid</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
